single data set imported and working
av. air temp data fetched from api and formatted for use

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </div>
 </body>
 
-<!-- <script src="js/scripts.js"></script> -->
+<script src="data/prefectures.js"></script>
+<script src="js/fetchData.js"></script>
 <script src="js/choropleth.js"></script>
 
 </html>
