slight refactor in fetchData function: getTemperatureData

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Project 5 of the freeCodeCamp's Data Visualization course">
+  <meta name="description" content="Statistics on envronmental factors in Japan">
   <meta name="author" content="Kevin Chaplin">
-  <title>DONT KNOW YET</title>
+  <title>Japan Environmental Dashboard</title>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
@@ -14,9 +14,9 @@
 
 <body>
   <div id="header">
-    <h1 id="title">LETS FIND SOME DATA</h1>
+    <h1 id="title">Japan Environmental Dashboard</h1>
     <h3 id="description">
-      I dunno
+      Recent trends in climate related data
     </h3>
     <div id="tooltip">
     </div>
