map is stable, will merge and create new feature for animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h3 id="description">
       Recent trends in climate related data
     </h3>
+    <button id="increment" onclick="increment()">Increment
+    </button>
+    <p id="year">
+    </p>
     <div id="tooltip">
     </div>
   </div>
