slider for controlling year implemented
also general cleanup of code complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Japan Environmental Dashboard</title>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/d3-simple-slider"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
 </head>
 
@@ -18,10 +19,9 @@
     <h3 id="description">
       Recent trends in climate related data
     </h3>
-    <button id="increment" onclick="increment()">Increment
+    <button id="increment" >NOT IN USE
     </button>
-    <p id="year">
-    </p>
+    <p id="year"></p>
     <div id="tooltip">
     </div>
   </div>
