--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 <body>
   <div id="header">
     <h1 id="title">Japan Environmental Dashboard</h1>
-    <h3 id="description">
-      Recent trends in climate related data
-    </h3>
-    <button id="increment" >NOT IN USE
+    <h3 id="description">Recent trends in climate related data</h3>
+    <button id="play-pause">Play
     </button>
     <p id="year"></p>
     <div id="tooltip">
