map data selectable, all animatable, fully functional
includes reset of timer and change of legend when data source changed

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
   <div id="header">
     <h1 id="title">Japan Environmental Dashboard</h1>
     <h3 id="description">Recent trends in climate related data</h3>
-    <button id="play-pause">Play
+    <button id="play-btn">Play
     </button>
-    <p id="year"></p>
+    <p id="year"></p><br>
+    <label for="data">Choose data:</lablel>
+    <select id="select-data" onchange="changeData()">
+      <option>Average temperature</option>
+      <option>Highest temperature of monthly averages of daily highest</option>
+      <option>Lowest temperature among monthly averages of daily lowest</option>
+      <option>Yearly Precipitation</option>
+    </select>
     <div id="tooltip">
     </div>
   </div>
