repositioned year and play button to map svg

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   </div>
   <div id="choropleth">
     <!-- <button id="play-btn">Play -->
-    </button>
+    <!-- </button> -->
     <!-- <p id="year"></p><br> -->
     <div>
     <label for="data">Choose data:</label>
       <select id="select-data" onchange="changeData()">
         <option>Average temperature</option>
-        <option>Highest temperature of monthly averages of daily highest</option>
-        <option>Lowest temperature among monthly averages of daily lowest</option>
+        <option>Highest monthly averages high temps</option>
+        <option>Lowest monthly aver low temps</option>
         <option>Yearly Precipitation</option>
       </select>
     </div>
