data is selectable, graph, title, etc. update. graph functional
needs check and tidy up of code

--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
     <h3 id="description">Recent trends in climate related data</h3>
   </div>
   <div id="climate-line-graph">
-      <h3 id="line-title">Average temperature - Nationwide (°C)</h3>
-      <label for="data">Choose data:</label>
-        <select id="select-data-line" onchange="changeDataClimateLine()">
-          <option>Average temperature</option>
-          <option>Highest monthly average - high temps</option>
-          <option>Lowest monthly average - low temps</option>
-          <option>Yearly precipitation</option>
-        </select>
-      <div id="climate-line-graph-plot">
-      </div>
+    <h3 id="climate-title">Average temperature - Nationwide (°C)</h3>
+    <div>
+      <label for="select-data-climate">Choose data:</label>
+      <select id="select-data-climate" onchange="changeDataClimate()">
+        <option>Average temperature</option>
+        <option>Highest monthly average - high temps</option>
+        <option>Lowest monthly average - low temps</option>
+        <option>Yearly precipitation</option>
+      </select>
+    </div>
+    <div id="climate-line-graph-plot">
+    </div>
   </div>
   <div id="choropleth">
     <h3 id="map-title">Average temperature (°C)</h3>
     <div>
-    <label for="data">Choose data:</label>
+      <label for="slect-data-map">Choose data:</label>
       <select id="select-data-map" onchange="changeDataMap()">
         <option>Average temperature</option>
         <option>Highest monthly average - high temps</option>
