initial data fetch - single energy type, working
API has limit of 5 datasets per request, 6 sets required, will try looped fetch requests

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="choropleth">
     <h3 id="map-title">Average temperature (°C)</h3>
     <div>
-      <label for="slect-data-map">Choose data:</label>
+      <label for="select-data-map">Choose data:</label>
       <select id="select-data-map" onchange="changeDataMap()">
         <option>Average temperature</option>
         <option>Highest monthly average - high temps</option>
@@ -53,6 +53,7 @@
 <script src="data/prefectures.js"></script>
 <script src="js/choropleth.js"></script>
 <script src="js/climateLineGraph.js"></script>
+<script src="js/energyBarGraph.js"></script>
 <script type="module">
   import {interpolateYlGn} from "https://cdn.skypack.dev/d3-scale-chromatic@3";
   const yellow = interpolateYlGn(0); // "rgb(255, 255, 229)"
