data fetch loop changed to use promise all
with fix, allows for all data to be loaded before running any calculations. also, added axes to graph

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+
   <div id="page-title">
     <h1 id="title">Japan Environmental Dashboard</h2>
     <h3 id="description">Recent trends in climate related data</h3>
   </div>
+
   <div id="climate-line-graph">
     <h3 id="climate-title">Average temperature - Nationwide (°C)</h3>
     <div>
@@ -32,6 +34,13 @@
     <div id="climate-line-graph-plot">
     </div>
   </div>
+
+  <div id="energy-bar-graph">
+    <h3 id="energy-title">Energy Production</h3>
+    <div id="energy-bar-graph-plot">
+    </div>
+  </div>
+
   <div id="choropleth">
     <h3 id="map-title">Average temperature (°C)</h3>
     <div>
@@ -48,6 +57,7 @@
     <div id="tooltip">
     </div>
   </div>
+
 </body>
 
 <script src="data/prefectures.js"></script>
