stacked bar graph functional, requires legend

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <div id="energy-bar-graph">
-    <h3 id="energy-title">Energy Production</h3>
+    <h3 id="energy-title">Energy Production by Source (million kWh)</h3>
     <div id="energy-bar-graph-plot">
     </div>
   </div>
