basic styling upgrade, grid layout, borders, etc.
deadline reached, this will be version 1, further design upgrades required

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="climate-line-graph">
-    <h3 id="climate-title">Average temperature - Nationwide (°C)</h3>
+    <h3 id="climate-title">Average temperature</br>- Nationwide (°C)</h3>
     <div>
       <label for="select-data-climate">Choose data:</label>
       <select id="select-data-climate" onchange="changeDataClimate()">
@@ -54,8 +54,7 @@
     </div>
     <div id="map">
     </div>
-    <div id="tooltip">
-    </div>
+    <p>* This service uses the API feature of Statistics Dashboard, but the contents of this service are not guaranteed by the Statistics Bureau of Japan</p>
   </div>
 
 </body>
