--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </div>
 
   <div id="climate-line-graph">
+    <div class="lds-dual-ring line-loading"></div>
     <h3 id="climate-title">Average temperature</br>- Nationwide (°C)</h3>
     <div>
       <label for="select-data-climate">Choose data:</label>
@@ -36,12 +37,14 @@
   </div>
 
   <div id="energy-bar-graph">
+    <div class="lds-dual-ring bar-loading"></div>
     <h3 id="energy-title">Energy Production by Source (million kWh)</h3>
     <div id="energy-bar-graph-plot">
     </div>
   </div>
 
   <div id="choropleth">
+    <div class="lds-dual-ring map-loading"></div>
     <h3 id="map-title">Average temperature (°C)</h3>
     <div>
       <label for="select-data-map">Choose data:</label>
