--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
       </div>
       <div id="map">
       </div>
-      <p>* This service uses the API feature of Statistics Dashboard, but the contents of this service are not guaranteed by the Statistics Bureau of Japan</p>
+      <!-- <div id="notes">
+        <p>* This service uses the API feature of Statistics Dashboard, but the contents of this service are not guaranteed by the Statistics Bureau of Japan</p>
+      </div> -->
     </div>
   </div>
 </body>
