updated play button, reinstated data comment on choropleth

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </div>
       <div id="map">
       </div>
-      <!-- <div id="notes">
+      <div id="notes">
         <p>* This service uses the API feature of Statistics Dashboard, but the contents of this service are not guaranteed by the Statistics Bureau of Japan</p>
-      </div> -->
+      </div>
     </div>
   </div>
 </body>
